# my-study

./: README.md  build.sh
HDDPMQ_nodeRed/: README.md  hdd-pmq.html  hdd-pmq.js  hddPMQ.html  hddPMQ.js  lower-case.html  lower-case.js
MyMqttDrv/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac  mk.sh
MyMqttDrv/TestApp/: Makefile.am  Makefile.in  Sim1520PUB.sh  test.c
MyMqttDrv/data/: Makefile.am  Makefile.in  mqtt_sub.conf
MyMqttDrv/include/: DataProc.h  MqttHal.h  SensorNetwork_APIex.h  list.h  mqtt_client_shared.h
MyMqttDrv/src/: DataProc.c  Makefile.am  Makefile.in  MqttHal.c  SensorNetwork_API.c  list.c  mqtt_client_shared.c
NodeJs_C_addon/: README.md  binding.gyp  index.js  package.json  pow.cpp
NodeJs_Express_hello/: README.md  file  greetings.js  hello.js  module1.js  sensorHub.info  web.js  wise_snail.js  wise_snail_bkup1.js  wise_snail_data.js  wisesnail_msgmgr.js  wisesnail_msgmgr_bkup.js
NodeJs_hello/: .tf_test.py.swp  README.md  tf_test.py
NodeRed_Advantech_MLP_ML/: .tf_mlp.py.swp  .tf_slp.py.swp  .tf_t.py.swp  iris.csv  tf_mlp.py
NodeRed_Advantech_SLP_ML/: README.md  tf_plot_data.py  tf_slp.py  tf_t.py
NodeRed_PLA/: FILE.INI  README.md  my-pla.html  my-pla.js  pla.py  sensor.data  show_input_w_result.py
NodeRed_call_python/: README.md  hello.py  lower-case.js
PMQ_nodeRed/: lower-case.js
R_QA_ML_model/: Feature.data  Model.RData  PredictionModel.R  README.md  Threshold.data  TrainModel.R  app.js  hdd_ml_model.js
R_QA_model/: babiesssss.txt  code.R  data.format  model.RData  myPredictCode.R  test.js  test_data.txt
R_QA_model2/: PredictionModel.R  README.md
R_helloWorld/: README.md  a.R  code.R  test.js
TF_Adaline/: README.md  tf_adaline.py  tf_iris.py
TF_array/: .tf_test.py.swp  README.md  tf_array.py
TF_hello/: README.md  tf_test.py
android_HelloWorldApp/: README.md
autotool_hello/: .config  Makefile  Makefile.am  README.md  hello.c
autotool_hello_shared_library/: Makefile.am  README.md  mk.sh
c_call_python/: README.md  configure.ac
c_call_python/src/: Makefile.am  arbName.py  fnA.c  hello.c
create_NodeRed_node/: README.md  hello.py  lower-case.html  lower-case.js
docker-compose-example/: README.md  deploy_eis.sh
docker_TensorFlow/: .Dockerfile.swp  .bash_history  Dockerfile  README.md
docker_apiGateway/: .bash_history  Dockerfile  README.md
docker_hdd_failure_predict_service/: Dockerfile  README.md
docker_hdd_ml_srcipt/: README.md  setup.sh
docker_mqtt/: Dockerfile  README.md
files/: webmin.acl
go_hello/: README.md
hdd_failure_predict_service/: .bash_history  .viminfo  Feature.data  Feature.format  Model.RData  MyData.csv  PredictionModel.R  README.md  Threshold.data  TrainModel.R  deploy.sh  hdd_ml_model.js  log.sh  mqtt_server.conf  start.sh
image/: libnet-mqtt-perl_1.21.bb
m4_macro/: README.md  hello.m4
nodejs_call_hdd_predict_C/: Makefile  README.md  hddPredict.c  index.js
nodejs_call_shared_libraray/: .Makefile.swp  Makefile  README.md  index.js  lib_a.c
nodejs_event/: README.md  module1.js  web.js  wisesnail_event.js
nodejs_express_async_respons/: README.md  module1.js  web.js
nodejs_express_async_respons_v2/: README.md  module1.js  web.js
nodejs_ml_model/: .wisesnail.js.swp  Feature.data  README.md  hdd_ml_model.js  mqtt_server.conf  wisesnail.js
nodejs_wisesnail/: README.md  wisesnail.js
perl_LWP/: README.md  lwp.pl  lwp_get.pl  lwp_put.pl
perl_array/: README.md  array.pl
perl_curl/: README.md  perl_curl_get.pl  perl_curl_put.pl
perl_forloop/: forloop.pl
perl_hash_array/: README.md  hash_array.pl
perl_hello/: hello.pl
perl_ifelse/: README.md  ifelse.pl
perl_json/: README.md  json-test.pl
(+128 files in other folders)
