bin_PROGRAMS = testMqttSub

LDADD = ../src/libMqttDrv.la ../../../Tools/AdvLog/src/libAdvLog.la ../../../Tools/AdvJSON/src/libAdvJSON.la
AM_CFLAGS = -I../include -I../../../Tools/AdvJSON/inc -I../../../Tools/AdvLog/include -I../../../inc
AM_CXXFLAGS = -I../include -I../../../Tools/AdvJSON/inc -I../../../Tools/AdvLog/include -I../../../inc

testMqttSub_SOURCES = test.c
